--- a/asset/homepage.css
+++ b/asset/homepage.css
@@ -307,12 +307,20 @@
 
 }
 
-
+@media(max-width:1162px){
+    h1{
+        font-size: 40px !important;
+        margin: 0 !important;
+    }
+}
 @media(max-width:1116px) {
     nav {
         ul {
             margin-top: 10px !important;
         }
+    }
+    h1{
+        font-size: 30px !important;
     }
 
     .title {
@@ -333,7 +341,10 @@
 
 @media(max-width:938px) {
     .title {
-        font-size: 30px !important;
+        font-size: 25px !important;
+    }
+    p{
+        font-size: 14px !important;
     }
 
     .left-part {
@@ -394,9 +405,11 @@
 
 @media(max-width:528px) {
     .title {
-        margin-top: 0 !important;
+        margin-top: -30px !important;
     }
+
 }
+
 @media(max-width:480px){
     .main-div {
         flex-direction: column !important;
@@ -406,8 +419,8 @@
 
         .right-part {
             height: 200px !important;
-            margin-top: 30px;
-            width: 60% !important;
+            margin-top: -40px !important;
+            width: 40% !important;
             margin-left: 80px;
         }
 
